@@ -1,3 +1,8 @@
+2014-02-21  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	* config/open-axiom.m4 (OPENAXIOM_CANONICAL_SYSTEM): Set derived
+	OpenAxiom-specified build directories too.
+
 2014-02-10  Gabriel Dos Reis  <gdr@integrable-solutions.net>>
 
 	* config/open-axiom.m4: Clean up global variable names.
